# python-midi

./: .gitignore  README.md  old_setup.py  pyproject.toml  setup.py
data/: empty.mid
examples/: example_2.py  example_3.py
src/: containers.py  events.py
src/midi/: containers.py  events.py  fileio.py  util.py
src/python_midi.egg-info/: PKG-INFO  SOURCES.txt
tests/: containers_tests.py  tests.py
tests/midi/: containers_test.py  midi_test.py
